--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,17 @@ body {
 
 .container {
   width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin: auto;
+  padding: 0 10px;
+}
+
+.section {
+  padding: 60px 0;
+}
+
+.section-title {
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .header {
@@ -75,4 +84,89 @@ body {
 
 .header-menu-link:hover {
   background-color: var(--accent-light);
+}
+
+.intro-iner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro {
+  padding: 60px 0;
+}
+
+.intro-right {
+  width: 60%;
+}
+
+.contacts {
+  margin-bottom: 60px;
+}
+
+.intro-left {
+  width: 30%;
+}
+
+.intro-img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+.intro-right h1,
+.intro-right h3 {
+  margin: 0 0 10px;
+}
+
+.contacts ul {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.skills {
+  color: var(--pure-white);
+  background-color: var(--accent);
+}
+
+.skills ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.skills li {
+  background-color: var(--accent-light);
+  border-radius: 4px;
+  padding: 10px 20px;
+}
+
+.code-exaple {
+  text-align: center;
+}
+
+.code-exaple p {
+  font-style: italic;
+}
+
+.code-exaple b {
+  font-style: normal;
+}
+
+.code-exaple pre {
+  text-align: left;
+  margin: 0 auto;
+  width: 40%;
+  font-size: 1.3em;
+  color: var(--pure-white);
+  background-color: var(--accent);
+  border-radius: 8px;
 }
