--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
 .intro-img {
   width: 250px;
   height: 250px;
-  border-radius: 50%;
+  border-radius: 20%;
 }
 
 .intro-right h1,
@@ -131,6 +131,7 @@ body {
 .skills {
   color: var(--pure-white);
   background-color: var(--accent);
+  padding-top: 30px;
 }
 
 .skills ul {
@@ -146,7 +147,7 @@ body {
 .skills li {
   background-color: var(--accent-light);
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 15px 25px;
 }
 
 .code-exaple {
@@ -169,4 +170,41 @@ body {
   color: var(--pure-white);
   background-color: var(--accent);
   border-radius: 8px;
+}
+
+.education {
+  margin-bottom: 40px;
+  background-color: var(--accent);
+  color: var(--pure-white);
+  padding-top: 20px;
+}
+
+.education ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 60px;
+}
+
+.portfolio ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 40px;
+  margin: 0;
+  padding: 0;
+}
+
+.languages {
+  background-color: var(--accent);
+  color: var(--pure-white);
+}
+
+.languages ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 40px;
 }
